// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithButton /> by default matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ hLnVGF sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI dyKJqZ"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with buttonProps prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ hLnVGF sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI dyKJqZ"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with component inside button value matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ hLnVGF sc-AxgMl lavPwF"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
  />
  <button
    className="sc-AxheI dyKJqZ"
    disabled={false}
    type="button"
  >
    <div
      className="k-Loader"
    >
      <svg
        className="k-Loader__circle"
        viewBox="0 0 10 10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={5}
          cy={5}
          fill={null}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        viewBox="0 0 10 10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={5}
          cy={5}
          fill={null}
          r={5}
        />
      </svg>
      <svg
        className="k-Loader__circle"
        viewBox="0 0 10 10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx={5}
          cy={5}
          fill={null}
          r={5}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<TextInputWithButton /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ hLnVGF sc-AxgMl lavPwF"
    disabled={true}
    name="text"
  />
  <button
    className="sc-AxheI lmcPvu"
    disabled={true}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with error prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ hdggzc sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI bbGZhf"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with giant prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ bBHpxA sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI dyKJqZ"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with huge prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ carLrL sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI dyKJqZ"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with props matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ hLnVGF sc-AxgMl lavPwF"
    disabled={false}
    name="text"
    placeholder="Les props sont transmises"
    value="foobar"
  />
  <button
    className="sc-AxheI dyKJqZ"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with tiny prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ gUZorU sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI dyKJqZ"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`<TextInputWithButton /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-AxhUy hmRpEX"
>
  <input
    className="sc-AxirZ AJCco sc-AxgMl lavPwF"
    disabled={false}
    name="text"
  />
  <button
    className="sc-AxheI frpXKH"
    disabled={false}
    type="button"
  >
    Button
  </button>
</div>
`;
